feat 文件管理模块, 调试IAM